# Seawolf-Accessibility

./: .env  .gitignore  README.md  next.config.js  package-lock.json  package.json
.next/: trace
.next/cache/: .rscinfo
.next/cache/webpack/client-development/: index.pack.gz.old
.next/server/: server-reference-manifest.json
app/: globals.css  layout.js  package.json  page.js  railway.toml
app/api/getMapsKey/: route.js
app/api/maptest/: route.js
app/components/: example.js
app/components/styles/: example.module.css
backend/: config.py  dijkstraTest.py  dijkstra_results.txt  djikstra.py  format_data.py  formatted_data.json  google_maps_util.py  graph_utils.py  index.html  main.py  new_dijkstra.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  route_cost.py  routingBeta.py  ways_output.json
backend/models/: bestRoute.py  costModel.py  trainLinearModel.py  trained_route_model.joblib
backend/parser/: Makefile  ways_output.json
backend/parser/data/: sbu.pbf  sbu_map.pbf
backend/parser/include/: const.h  global.h  osm.h  protobuf.h  read_helpers.h  zlib_inflate.h
backend/parser/src/: main.c  osmpbf.c  protobuf.c  read_helpers.c  zlib_inflate.c
public/: djikstraTest.html  find_nearest_nodes.js  formatted_data.json  formatted_data_copy.json  nodes.json  polytest.html  ways_output.json
