[tool.poetry]
name = "hopperhacks25"
version = "0.1.0"
description = "Map for disabled people at stony that takes into account elevation + disability accesible routes"
authors = ["tarunvaid05 <tarunvaid05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
googlemaps = "^4.10.0"
python-dotenv = "^1.0.1"
polyline = "^2.0.2"
networkx = "^3.4.2"
pandas = "^2.2.3"
numpy = "^2.2.3"
scipy = "^1.15.2"
shapely = "^2.0.7"
gmplot = "^1.4.1"
folium = "^0.19.4"
requests = "^2.32.3"
pygeodesic = "^0.1.11"
geopy = "^2.4.1"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
